[tool.poetry]
name = "wooden-puppy"
version = "0.1.0"
description = ""
authors = ["aviv57 https://github.com/aviv57/"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
